# worktreemgr

./: .gitignore  Cargo.toml  README.md  clippy.toml
docs/design/: worktree-ignored-file-sync.md
docs/superpowers/specs/: 2026-06-24-worktree-ignored-file-sync-design.md
src/: atomic.rs  cli.rs  config.rs  control_store.rs  discovery.rs  domain.rs  drift.rs  error.rs  fs_plan.rs  git_repo.rs  lib.rs  lock.rs  main.rs  manifest.rs  materialize.rs  mode_plan.rs  state.rs  sync_plan.rs  ui.rs
src/commands/: add.rs  apply.rs  gc.rs  init.rs  mod.rs  mode.rs  prune.rs  status.rs  sync.rs
src/fs_plan/: backup.rs  execute.rs
src/mode_plan/: sync_transition.rs
src/sync_plan/: entry.rs
tests/: cli_help.rs  commands_init_apply_status.rs  commands_sync_mode_gc.rs  config_model.rs  discovery.rs  e2e_worktree_sync.rs  fs_plan.rs  git_repo_resolution.rs  manifest_and_fs_plan.rs  materialize_and_modes.rs  safety_primitives.rs  state_and_drift.rs  sync_plan.rs
tests/e2e_support/: mod.rs
tests/support/: mod.rs
