[package]
name = "worktreemgr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Manage gitignored AI/local files across git worktrees"
repository = "https://github.com/FrankieeW/worktreemgr"
readme = "README.md"
keywords = ["git", "worktree", "cli", "sync"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "wk"
path = "src/lib.rs"

[[bin]]
name = "wk"
path = "src/main.rs"

[dependencies]
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive", "env", "wrap_help", "color", "unicode"] }
cliclack = "0.5"
color-eyre = "0.6"
console = "0.15"
fs4 = "0.13"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.9"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
filetime = "0.2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = "line-tables-only"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
non_ascii_idents = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
